# CalendarHelperAi

./: .gitignore  .replit  LICENSE  README.md  app.py  models.py  pyproject.toml  routes.py
attached_assets/: Pasted--2025-02-03-07-47-34-679-DEBUG-in-trace-start-tls-started-ssl-context-ssl-SSLContext-object-at-0-1738568924544.txt  Pasted--2025-02-08-08-10-13-378-DEBUG-in-base-client-HTTP-Response-POST-https-api-openai-com-v1-chat--1739002255143.txt  Pasted-format-type-json-object-2025-02-08-08-41-52-254-DEBUG-in-base-client-Sending-HTTP-Req-1739004198240.txt
instance/: calendar_app.db
static/: example-images-and-prompts.html  terms.html
static/css/: style.css
static/js/: app.js
templates/: index.html
utils/: ai_processor.py  calendar.py  config.py  location_service.py  prompts.py
